--- a/package.json
+++ b/package.json
@@ -10,14 +10,10 @@
   "license": "ISC",
   "devDependencies": {
     "bootstrap": "^4.3.1",
-    "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
-    "gulp-file": "^0.4.0",
+    "gulp-connect": "^5.7.0",
     "gulp-sass": "^4.0.2",
-    "gulp-shell": "^0.7.1",
     "html5-boilerplate": "^7.2.0"
   },
-  "dependencies": {
-    "path": "^0.12.7"
-  }
+  "dependencies": {}
 }
